# WAP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: CMakeList.txt.md  emmc.md
src/: main.cpp  sum.cpp  test.c
src/header/: sum.h
web/: package-lock.json  package.json
web/docs/: gif.md
web/src/: play_gif.js
